# llvm-pred

./: .clang-format  .clang_complete  .gitmodules  CMakeLists.txt  IgnoreFunc.txt  IgnoreFunc~.txt  LICENSE  LibCall.txt  LibFdef.ll  README.md  README.rst  config.h.in  debug.gdb  head.h  llvm-pred.pc.in
cmake/: FindLLVM.cmake  FindTSC.cmake  LLVM-Config.cmake  LLVMConfig.cmake
example/: 1.add.c  1.add.ll  2.fibonacci.c  2.fibonacci.ll  3.inst.ll
scripts/: curver_fitting.nb  dirdiff.sh  dirpredconv.sh  doexec.sh  drawline.py  freqavg.py  gettime.sh  llc.sh  quick-make.sh
src/: .clang_complete  Adaptive.cpp  Adaptive.h  BlockFreqExpr.cpp  BlockFreqExpr.h  CMakeLists.txt  CurveFit.cpp  DAEAdaptive.cpp  DSEAdaptive.cpp  GVInfo.cpp  GVInfo.h  GetOpNum.cpp  IgnoreList.h  InsertTripCount.cpp  InstCombineAdapter.cpp  InstTiming.cpp  KnownLibCallInfo.cpp  KnownLibCallInfo.h  LibFReshape.cpp  LockInst.cpp  LockInst.h  LoopSimplify.cpp  LoopSimplify.h  LoopTripCount.cpp  LoopTripCount.h  MyAsmPrinter.cpp  MyAsmPrinter.h  PerformPred.cpp  PredBlockProfiling.c  PredBlockProfiling.cpp  PredBlockProfiling.h  Print.cpp  PrintEnv.cpp  Reduce.cpp  Reduce.h  Resolver.cpp  Resolver.h  ServiceLibrary.cpp  SlashShrink.cpp  SlashShrink.h  (+26 more)
test/: 1.irread.cpp  2.jit.cpp  3.test.cpp  CMakeLists.txt  CodeTest.c  Makefile  test-Rand.c  test-Tmax.c  test-fadd.c  test-load.c  test-loadc.c  test-loadcwithmix.c  test-loadcwithorder.c  test-loadcwithrand.c  test-loadse.c  test-loadsewithmix.c  test-loadsewithorder.c  test-loadsewithrand.c  test-loadwithorder.c  test-tsc.c  test.sh
timing/: CMakeLists.txt  config.h  libtiming.c  libtiming.h  timing_source.c
unit/: CGFilterTest.cpp  CMakeLists.txt  GEPFilterTest.cpp  IgnoreListTest.cpp  NousedTest.cpp  UtilTest.cpp  gep_filter.ll  internal.h
